iptables
# Generated by iptables-save v1.4.21 on Tue May 19 22:12:21 2020
*filter
:INPUT ACCEPT [1205:1161583]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [803:1186683]
-A OUTPUT -p tcp -m string --string "dafahao.com" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "zhengjian.com" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "zhengjian.org" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "minghui.org" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "dongtaiwang.com" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "epochtimes.com" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "epochtimes.org" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "ntdtv.com" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "ntdtv.org" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "falundafa.com" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "falundafa.org" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "wujieliulan.com" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "pbc.gov.cn" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "boc.cn" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "ccb.com" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "abchina.com" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "bankcomm.com" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "psbc.com" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "cdb.com.cn" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "adbc.com.cn" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "cmbchina.com" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "spdb.com.cn" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "ecitic.com" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "hxb.com.cn" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "cebbank.com" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "cib.com.cn" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "cgbchina.com.cn" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "cmbc.com.cn" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "pingan.com" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "czbank.com" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "cbhb.com.cn" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "egbank.com.cn" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "citibank.com.cn" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "hsbc.com.cn" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "sc.com" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "hangseng.com" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "hkbea.com.cn" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "tieba.baidu.com" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "weibo.com" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "douyin.com" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "iesdouyin.com" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "snssdk.com" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "weibo.cn" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "douban.com" --algo bm --to 65535 -j DROP
-A OUTPUT -p tcp -m string --string "amemv.com" --algo bm --to 65535 -j DROP
COMMIT
# Completed on Tue May 19 22:12:21 2020
# Generated by iptables-save v1.4.21 on Tue May 19 22:12:21 2020
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Tue May 19 22:12:21 2020
